--- a/Pages/emppayroll.html
+++ b/Pages/emppayroll.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Employee Payroll App</title>
 </head>
 <body>
@@ -17,5 +18,14 @@
             </div>
         </div>
     </header>
+    <div class="form-content">
+        <form class="form" action="#" onsubmit="save(event);return false">
+            <div class="form-head">Employee Payroll Form</div>
+            <div class="row-content">
+                <label class="lable text" for="name">Name : </label>
+                <input class="input" type="text" id="name" name="name" placeholder="Your Name.." required>
+            </div>
+        </form>
+    </div>
 </body>
 </html>
