--- a/Pages/emppayroll.html
+++ b/Pages/emppayroll.html
@@ -22,30 +22,26 @@
         <form class="form" action="#" onsubmit="save(event);return false">
             <div class="form-head">Employee Payroll Form</div>
             <div class="row-content">
-                <label class="lable text" for="name">Name : </label>
+                <label class="lable text" for="name">Name:</label>
                 <input class="input" type="text" id="name" name="name" placeholder="Your Name.." required>
             </div>
             <div>
-                <label class="label text" for="profile">Profile image</label>
+                <label class="label text" for="profile">Profile image:</label>
                 <div class="profile-radio-content">
                     <label>
-                        <input type="radio" id="profile1" name="profile" value="/assets/profile-images/Ellipse -1.png"
-                            required>
+                        <input type="radio" id="profile1" name="profile" value="/assets/profile-images/Ellipse -1.png" required>
                         <img class="profile" id='image1' src="/assets/profile-images/Ellipse -1.png">
                     </label>
                     <label>
-                        <input type="radio" id="profile2" name="profile" value="/assets/profile-images/Ellipse -2.png"
-                            required>
+                        <input type="radio" id="profile2" name="profile" value="/assets/profile-images/Ellipse -2.png" required>
                         <img class="profile" id='image2' src="/assets/profile-images/Ellipse -2.png">
                     </label>
                     <label>
-                        <input type="radio" id="profile3" name="profile" value="/assets/profile-images/Ellipse -3.png"
-                            required>
+                        <input type="radio" id="profile3" name="profile" value="/assets/profile-images/Ellipse -3.png" required>
                         <img class="profile" id='image3' src="/assets/profile-images/Ellipse -3.png">
                     </label>
                     <label>
-                        <input type="radio" id="profile4" name="profile" value="/assets/profile-images/Ellipse -4.png"
-                            required>
+                        <input type="radio" id="profile4" name="profile" value="/assets/profile-images/Ellipse -4.png" required>
                         <img class="profile" id='image4' src="/assets/profile-images/Ellipse -4.png">
                     </label>
                 </div>
@@ -74,10 +70,9 @@
                     <label class="text" for="others">Others</label>
                 </div>
             </div>
-
             <div class="row-content">
                 <label class="label text" for="salary">Choose Your Salary </label>
-                <input class="input" type="range" name="salary" id="salary" min="300000" max="500000" step="100" value="400000">
+                <input class="input" type="range" name="salary" id="salary" min="300000" max="5000000" step="100" value="400000">
                 <output class="salary-output text" for="salary">400000</output>
             </div>
              <div class="row-content">
@@ -153,8 +148,9 @@
                     <div class="submit-reset">
                         <button type="submit" class="button submitButton" id="submitButton">Submit</button>
                         <button type="reset" class="resetButton button">Reset</button>
-                    </div>
+                </div>
+                </div>
         </form>
-    </div>
+    <script src="../js/emppayroll.js"></script>
 </body>
 </html>
