Added : populate the employee payroll data object

--- a/Pages/emppayroll.html
+++ b/Pages/emppayroll.html
@@ -152,5 +152,6 @@
                 </div>
         </form>
     <script src="../js/emppayroll.js"></script>
+    <script src="../js/employeepayroll.js"></script>
 </body>
 </html>
