Added : getter Setter

--- a/Pages/emppayroll.html
+++ b/Pages/emppayroll.html
@@ -152,6 +152,6 @@
                 </div>
         </form>
     <script src="../js/emppayroll.js"></script>
-    <script src="../js/employeepayroll.js"></script>
+    <script src="../js/employeepayrollData.js"></script>
 </body>
 </html>
