--- a/Pages/emppayroll.html
+++ b/Pages/emppayroll.html
@@ -24,6 +24,7 @@
             <div class="row-content">
                 <label class="lable text" for="name">Name:</label>
                 <input class="input" type="text" id="name" name="name" placeholder="Your Name.." required>
+                <error-output class="text-error" for="name"></error-output>
             </div>
             <div>
                 <label class="label text" for="profile">Profile image:</label>
@@ -152,6 +153,6 @@
                 </div>
         </form>
     <script src="../js/emppayroll.js"></script>
-    <script src="../js/employeepayrollData.js"></script>
+    <script src="../js/emppayrollData.js"></script>
 </body>
 </html>
