--- a/Pages/empPayrollHome.html
+++ b/Pages/empPayrollHome.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/Homedtyle.css">
     <title>Employee Payroll Home</title>
 </head>
 <body>
@@ -17,7 +18,22 @@
             </div>
         </div>
     </header>
+    <div class="main-content">
+        <div class="header-content sub-main-content">
+            <div class="emp-details-text">
+                Employee Details
+                <div class="emp-count">10</div>
+            </div>
+            <div onclick="location.href='../pages/empForm.html'" class="add-button">
+                <div class="plus-icon">
+                    <img src="../assets/icons/add-24px.svg" alt="Add user logo">
+                </div>
+                <div>Add User</div>
+            </div>
+        </div>
+</body>
+
 </body>
 </body>
-<script src="../css/Homedtyle.css"></script>
+
 </html>
