--- a/Pages/empPayrollHome.html
+++ b/Pages/empPayrollHome.html
@@ -31,9 +31,35 @@
                 <div>Add User</div>
             </div>
         </div>
-</body>
+        <div class="table-main">
+            <table id="display" class="table">
+                <tr style=" background: #619ed8 0% 0% no-repeat padding-box;;">
+                    <th></th>
+                    <th>Name</th>
+                    <th>Gender</th>
+                    <th>Department</th>
+                    <th>Salary</th>
+                    <th>StartDate</th>
+                    <th>Actions</th>
+                </tr>
+                <td><img class="profile" src="../assets/profile-images/Ellipse -3.png">
 
+                </td>
+                <td>Aditya Bharti</td>
+                <td>Male</td>
+                <td>
+                    <div class="dept-label">Engineer</div>
+                    <div class="dept-label">Others</div>
+                </td>
+                <td>400000</td>
+                <td>2 June 2022</td>
+                <td>
+                    <img alt="delete" src="../assets/icons/delete-black-18dp.svg">
+                    <img alt="edit" src="../assets/icons/create-black-18dp.svg">
+                </td>
+            </table>
+        </div>
+    </div>
 </body>
 </body>
-
 </html>
