Added : view Details Using Templets Literals from JSON

--- a/Pages/empPayrollHome.html
+++ b/Pages/empPayrollHome.html
@@ -24,7 +24,7 @@
                 Employee Details
                 <div class="emp-count">10</div>
             </div>
-            <div onclick="location.href='../pages/empForm.html'" class="add-button">
+            <div onclick="location.href='../Pages/emppayroll.html'" class="add-button">
                 <div class="plus-icon">
                     <img src="../assets/icons/add-24px.svg" alt="Add user logo">
                 </div>
